<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1">

    <TextView
        android:id="@+id/texttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_text"
        android:textColor="#730372"
        android:textSize="28sp"
        android:textStyle="italic"
        android:fontFamily="cursive"
        android:layout_marginTop="10dp"/>

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/texttitle"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/text_player1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/player_1_score_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:background="@drawable/border"/>

        <TextView
            android:id="@+id/text_player2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/player_2_score_text"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_toEndOf="@id/text_player1"
            android:background="@drawable/border"/>

        <TextView
            android:id="@+id/score_Player1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/player_1_score_value"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_below="@id/text_player1"
            android:background="@drawable/border"/>

        <TextView
            android:id="@+id/score_Player2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/player_2_score_value"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_below="@id/text_player2"
            android:layout_toEndOf="@id/score_Player1"
            android:background="@drawable/border"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/relative_layout"
        android:background="@drawable/li_border"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:layout_marginTop="35dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/btn0"
                style="?android:attr/borderlessButtonStyle"
                android:contentDescription="@string/Content_description_text"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="44sp"
                android:layout_marginHorizontal="5dp"
                android:textFontWeight="800"
                android:background="@drawable/border"/>

            <Button
                android:id="@+id/btn1"
                style="?android:attr/borderlessButtonStyle"
                android:contentDescription="@string/Content_description_text"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textSize="44sp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:textFontWeight="800"
                android:background="@drawable/border"/>

            <Button
                android:id="@+id/btn2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:contentDescription="@string/Content_description_text"
                android:layout_height="80dp"
                android:textSize="44sp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:textFontWeight="800"
                android:background="@drawable/border"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:textFontWeight="800"
                android:layout_height="80dp"
                android:textSize="44sp"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/border"
                android:contentDescription="@string/Content_description_text"/>

            <Button
                android:id="@+id/btn4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:textFontWeight="800"
                android:contentDescription="@string/Content_description_text"
                android:layout_height="80dp"
                android:textSize="44sp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border"/>

            <Button
                android:id="@+id/btn5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:textFontWeight="800"
                android:contentDescription="@string/Content_description_text"
                android:layout_height="80dp"
                android:textSize="44sp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/btn6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:textFontWeight="800"
                android:layout_height="80dp"
                android:textSize="44sp"
                android:contentDescription="@string/Content_description_text"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/border"/>

            <Button
                android:id="@+id/btn7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textFontWeight="800"
                android:textSize="44sp"
                android:contentDescription="@string/Content_description_text"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/border"/>

            <Button
                android:id="@+id/btn8"
                style="?android:attr/borderlessButtonStyle"
                android:contentDescription="@string/Content_description_text"
                android:layout_width="80dp"
                android:textFontWeight="800"
                android:layout_height="80dp"
                android:textSize="44sp"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/border"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_linear"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:text="@string/Status_text"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_play_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textStatus"
        android:layout_centerHorizontal="true"
        android:text="@string/Play_again_button_text"
        android:textSize="22sp"
        android:backgroundTint="#219AFA"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btn_reset"
        android:contentDescription="@string/Content_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_play_again"
        android:layout_centerHorizontal="true"
        android:text="@string/Reset_button_text"
        android:textSize="22sp"
        android:backgroundTint="#F62948"
        android:textAllCaps="false"
        android:layout_marginBottom="8dp"/>

</RelativeLayout>

